<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:paddingTop="20dp"
    tools:context=".ACTIVITIES.ThirdActivity">

    <Button
        android:id="@+id/botonColocarBarcos"
        android:layout_width="232dp"
        android:layout_height="58dp"
        android:background="@drawable/borde_redondo"
        android:backgroundTint="#000000"
        android:fontFamily="@font/cabin_sketch"
        android:onClick="colocarBarcos"
        android:text="@string/etiq_colocar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/botonSiguiente2"
        android:layout_width="170dp"
        android:layout_height="56dp"
        android:background="@drawable/borde_redondo"
        android:backgroundTint="#000000"
        android:fontFamily="@font/cabin_sketch"
        android:onClick="siguiente"
        android:text="@string/etiq_siguiente"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/botonDeshacer"
        android:layout_width="170dp"
        android:layout_height="56dp"
        android:background="@drawable/borde_redondo"
        android:backgroundTint="#A63F3F"
        android:fontFamily="@font/cabin_sketch"
        android:onClick="deshacer"
        android:text="@string/etiq_deshacer"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="350dp"
        android:layout_height="387dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688">

    </GridLayout>

    <TextView
        android:id="@+id/textoInfo"
        android:layout_width="343dp"
        android:layout_height="230dp"
        android:fontFamily="@font/cabin_sketch"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/botonColocarBarcos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />

    <TextView
        android:id="@+id/textoTituloColocar"
        android:layout_width="333dp"
        android:layout_height="43dp"
        android:fontFamily="@font/cabin_sketch"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textoInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51" />

</androidx.constraintlayout.widget.ConstraintLayout>