<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".ACTIVITIES.GameActivity">

    <TextView
        android:id="@+id/textoTitulo"
        android:layout_width="333dp"
        android:layout_height="43dp"
        android:fontFamily="@font/cabin_sketch"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textoInfoPuntos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <TextView
        android:id="@+id/textoInfoPuntos"
        android:layout_width="343dp"
        android:layout_height="230dp"
        android:fontFamily="@font/cabin_sketch"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/botonEmpezar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/botonEmpezar"
        android:layout_width="232dp"
        android:layout_height="58dp"
        android:background="@drawable/borde_redondo"
        android:backgroundTint="#000000"
        android:fontFamily="@font/cabin_sketch"
        android:onClick="empezar"
        android:text="@string/etiq_empezar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="350dp"
        android:layout_height="387dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688">

    </GridLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutJ1"
        android:layout_width="180dp"
        android:layout_height="169dp"
        android:background="@drawable/borde_redondo"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_sketch"
            android:text="@string/etiq_turnoJ1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_sketch"
            android:text="@string/etiq_puntos"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.13999999" />

        <EditText
            android:id="@+id/textPuntosJ1"
            android:layout_width="69dp"
            android:layout_height="37dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="number"
            android:text="0"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.07999998" />

        <ImageView
            android:id="@+id/imgB1J1"
            android:layout_width="35dp"
            android:layout_height="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.96"
            app:srcCompat="@drawable/im2" />

        <ImageView
            android:id="@+id/imgB2J1"
            android:layout_width="35dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/im3" />

        <ImageView
            android:id="@+id/imgB3J1"
            android:layout_width="35dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/im3" />

        <ImageView
            android:id="@+id/imgB4J1"
            android:layout_width="35dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="@+id/imgB3J1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/im4" />

        <ImageView
            android:id="@+id/imgB5J1"
            android:layout_width="35dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/im5" />

        <ImageView
            android:id="@+id/imgB1J1R"
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.96"
            app:srcCompat="@drawable/im2r" />

        <ImageView
            android:id="@+id/imgB2J1R"
            android:layout_width="35dp"
            android:layout_height="48dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/im3r" />

        <ImageView
            android:id="@+id/imgB3J1R"
            android:layout_width="35dp"
            android:layout_height="48dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/im3r" />

        <ImageView
            android:id="@+id/imgB4J1R"
            android:layout_width="35dp"
            android:layout_height="64dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/im4r" />

        <ImageView
            android:id="@+id/imgB5J1R"
            android:layout_width="35dp"
            android:layout_height="80dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/im5r" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutJ2"
        android:layout_width="180dp"
        android:layout_height="169dp"
        android:background="@drawable/borde_redondo"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textTurno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_sketch"
            android:text="@string/etiq_turnoJ2"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002" />

        <TextView
            android:id="@+id/textP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_sketch"
            android:text="@string/etiq_puntos"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTurno"
            app:layout_constraintVertical_bias="0.13" />

        <EditText
            android:id="@+id/textPuntosJ2"
            android:layout_width="69dp"
            android:layout_height="37dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="number"
            android:text="0"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toEndOf="@+id/textP"
            app:layout_constraintTop_toBottomOf="@+id/textTurno"
            app:layout_constraintVertical_bias="0.06999999" />

        <ImageView
            android:id="@+id/imgB4J2"
            android:layout_width="35dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textP"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/im4" />

        <ImageView
            android:id="@+id/imgB1J2"
            android:layout_width="35dp"
            android:layout_height="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textP"
            app:layout_constraintVertical_bias="0.96"
            app:srcCompat="@drawable/im2" />

        <ImageView
            android:id="@+id/imgB2J2"
            android:layout_width="35dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textP"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/im3" />

        <ImageView
            android:id="@+id/imgB3J2"
            android:layout_width="35dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textP"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/im3" />

        <ImageView
            android:id="@+id/imgB5J2"
            android:layout_width="35dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textP"
            app:layout_constraintVertical_bias="0.9"
            app:srcCompat="@drawable/im5" />

        <ImageView
            android:id="@+id/imgB1J2R"
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textP"
            app:layout_constraintVertical_bias="0.96"
            app:srcCompat="@drawable/im2r" />

        <ImageView
            android:id="@+id/imgB2J2R"
            android:layout_width="35dp"
            android:layout_height="48dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textP"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/im3r" />

        <ImageView
            android:id="@+id/imgB3J2R"
            android:layout_width="35dp"
            android:layout_height="48dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textP"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/im3r" />

        <ImageView
            android:id="@+id/imgB4J2R"
            android:layout_width="35dp"
            android:layout_height="64dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textP"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/im4r" />

        <ImageView
            android:id="@+id/imgB5J2R"
            android:layout_width="35dp"
            android:layout_height="80dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textP"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/im5r" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>